# backend-coding-challenge

./: .gitignore  Makefile  README.md  TODO.md  main.py  pyproject.toml  requirements.txt
devops/docker/: Dockerfile  docker-compose.yml
gistapi/: api.py  filters.py  serializers.py  utils.py
tests/: test_api.py  test_utils.py
