[tool.poetry]
name = "GistAPI"
description = "A simple API for Gist Search"
authors = ["Mumtoz Valijonov"]
version = "1.0.0"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
aiohttp = "3.8.3"
aiosignal = "1.2.0"
async-timeout = "4.0.2"
attrs = "22.1.0"
certifi = "2022.9.24"
charset-normalizer = "2.1.1"
click = "8.1.3"
exceptiongroup = "1.0.0"
flake8 = "5.0.4"
flask = "2.2.2"
flask-pydantic = "0.11.0"
frozenlist = "1.3.1"
gunicorn = "20.1.0"
idna = "3.4"
importlib-metadata = "4.2.0"
iniconfig = "1.1.1"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
markupsafe = "2.1.1"
mccabe = "0.7.0"
multidict = "6.0.2"
packaging = "21.3"
pluggy = "1.0.0"
pycodestyle = "2.9.1"
pydantic = "1.10.2"
pyflakes = "2.5.0"
pyparsing = "3.0.9"
pytest = "7.2.0"
requests = "2.28.1"
tomli = "2.0.1"
typing-extensions = "4.4.0"
urllib3 = "1.26.12"
werkzeug = "2.2.2"
yarl = "1.8.1"
zipp = "3.10.0"
